# ops-load-diagnostic

./: .gitignore  README.md  app.js  index.html  pyproject.toml  styles.css  vercel.json
examples/: sample_batch.txt  sample_inbound.csv
output/: operations_load_diagnostic_20260208_180412.html  operations_load_diagnostic_20260208_180412.md  operations_load_diagnostic_20260208_180412.summary.json  operations_load_diagnostic_20260208_180426.md  operations_load_diagnostic_20260208_180426.summary.json
src/operations_load_diagnostic/: __init__.py  aggregation.py  classification.py  cli.py  ingestion.py  models.py  reporting.py
src/operations_load_diagnostic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
