[project]
name = "operations-load-diagnostic"
version = "0.1.0"
description = "Lightweight, read-only operations load diagnostic for logistics teams."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ops-diagnostic = "operations_load_diagnostic.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
